# wikidata-collector

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  comments.md  dockerfile  example.py  example_iterators.py  main.py  pyproject.toml  pytest.ini  requirements.txt  review.md  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: copilot-instructions.md  speckit.taskstoissues.agent.md
.github/scripts/: pre-commit-checks.sh
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/plans/: proxy-resilience-logging.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
api/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  validators.py
api/routes/: __init__.py  entities.py  figures.py  institutions.py  meta.py  metrics.py
api/services/: __init__.py  entity_service.py  expansion_handler.py  list_processor.py  response_builder.py
api/utils/: __init__.py  cache_utils.py  entity_utils.py  etag_utils.py  field_utils.py
app/: main.py  server.py
core/: __init__.py  wiki_service.py
core/normalizers/: __init__.py  figure_normalizer.py
infrastructure/: __init__.py  cache.py  observability.py  proxy_service.py
sparql/: __init__.py  utils.py
sparql/builders/: figures_query_builder.py  institutions_query_builder.py
specs/001-wikidata-etl-package/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wikidata-etl-package/checklists/: requirements.md
specs/001-wikidata-etl-package/contracts/: python-api.md
tests/: README.md  conftest.py
tests/integration/: test_integration.py  test_integration_live.py  test_iterate_public_figures.py  test_iterate_public_institutions.py  test_live_sparql_endpoints.py  test_resilience_and_logging.py
tests/unit/: test_client_iterators.py  test_deep_sleep_retry.py  test_dependencies.py  test_expansion_handler.py  test_logging.py  test_normalizers.py  test_proxy_service.py  test_sparql_builders.py  test_sparql_security.py  test_streaming.py
wikidata_collector/: __init__.py  cache.py  client.py  config.py  constants.py  exceptions.py  models.py  proxy.py
wikidata_collector/normalizers/: __init__.py  figure_normalizer.py  institution_normalizer.py
wikidata_collector/query_builders/: figures_query_builder.py  institutions_query_builder.py
wikidata_retriever/: __init__.py  client.py  config.py  exceptions.py
wikidata_retriever/normalizers/: institution_normalizer.py
